@@ -24,6 +24,8 @@ Version vNext
 		-[Core] Concurrency bug fixed in collections registered with RegisterAllOpenGeneric. (work item 20681).
 		-[Core] Scoped lifestyles now allow resolving new instances while they are being disposed. Those
 		 resolved instances will be disposed as well.
+		-[Core] Unregistered concrete types that were requested inside a singleton-registered delegate, were
+		 instantiated twice during a call to Verify. (work item 20732).
 
 
 Version 2.4.1 (v2.4.1 RTM) 2014-01-14
